deploy/database-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app: mysql
  name: mysql
  namespace: api
spec:
  serviceName: "mysql-database"
  replicas: 1
  selector:
    matchLabels:
      app: mysql
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
      - image: mysql:8.0.33
        name: mysqld
        ports:
        - containerPort: 3306
        environment:
        - name: MYSQL_RANDOM_ROOT_PASSWORD
          value: true
