deploy/ibmmq.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: ibmmq
  name: ibmmq
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ibmmq
  template:
    metadata:
      labels:
        app: ibmmq
    spec:
      containers:
      - image: icr.io/ibm-messaging/mq:latest
        imagePullPolicy: Always
        name: mq
        ports:
        - containerPort: 1414
        - containerPort: 9443
