deploy/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: api
  name: api
spec:
  ports:
  - name: "endpoint-api"
    port: 80
    protocol: TCP
    targetPort: 3000
  selector:
    app: api
  type: NodePort
status:
  loadBalancer: {}
