deploy/api-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api
  annotations:
    # traefik.ingress.kubernetes.io/router.middlewares: redirect-https@kubernetescrd
spec:
  ingressClassName: traefik       # refere-se ao Traefik que já vem com o k3s
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: api
                port:
                  number: 3000
